@@ -1,5 +1,8 @@
 2002-05-21  Sven Wischnowsky  <wischnow@zsh.org>
 
+	* 17192: Src/Zle/compcore.c: fix for completion in nested
+	quotes where the sub-word ends in a backslash
+
 	* 17191: Completion/Base/Utility/_arguments,
 	Completion/Unix/Command/_rsync: fix removal of automatically
 	added specs (from the -- option) for which a user-defined one
